<resources>
    <string name="app_name">NUMAD21Su-LeoraFink</string>
    <string name="about_string">About</string>
    <string name="activity2">Activity2</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="b">B</string>
    <string name="link_collector">Link Collector</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
<!--    <string name="textview">TextView</string>-->
    <string name="url">url</string>
    <string name="textname">textName</string>
    <string name="saved_links">Saved Links:</string>
    <string name="find_location">FIND LOCATION</string>
    <string name="_0_0">0.0</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ping_web_service">PING WEB SERVICE</string>
    <string name="enter_a_number_you_d_like_a_trivia_on">Enter a number you\'d like a trivia on</string>
</resources>